# PersoClient

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_bkp.txt  FirmwareLoader.pro  FirmwareLoader.pro.user.5a8e29d  GenerateDeployment.bat  JLinkManager.pro  PersoClient.pro  PersoClient.pro.user.11a0aa8  README.md  doxygen.conf  main.cpp
.gitea/workflows/: persoclient-continuous.yaml  persoclient.yaml
BusinessLogic/: production_unit_context.cpp  production_unit_context.h
BusinessLogic/AsyncObjects/: async_production_manager.cpp  async_production_manager.h  async_programmer.cpp  async_programmer.h  async_server_connection.cpp  async_server_connection.h  async_sticker_printer.cpp  async_sticker_printer.h  async_wrapper.cpp  async_wrapper.h  i_async_wrapper.cpp  i_async_wrapper.h  progressable_async_object.cpp  progressable_async_object.h  progressable_async_wrapper.cpp  progressable_async_wrapper.h
BusinessLogic/Managers/: production_manager.h
DEBIAN/: control  control.in  postinst
Deployment/: JLinkScript.jlink
DeploymentBackup/: JLinkScript.jlink
Doc/: .$uml.drawio.bkp  ci.md  uml.drawio  use_cases.drawio
Doc/manual/: manual.md
Environment/: client_manager.cpp  client_manager.h  definitions.h  firmware_manager.cpp  firmware_manager.h  load_manager.cpp  load_manager.h  log_system.cpp  log_system.h  notification_system.cpp  notification_system.h  perso_client.cpp  perso_client.h  programmator_manager.cpp  programmator_manager.h  programmer_manager.cpp  programmer_manager.h  text_stream_log_backend.cpp  text_stream_log_backend.h  transponder_seed_model.cpp  transponder_seed_model.h  user_Interaction_system.cpp  user_Interaction_system.h  user_settings.cpp  user_settings.h  widget_log_backend.cpp  widget_log_backend.h
Firmware/: firmware.hex
GUI/: abstract_gui.cpp  abstract_gui.h  authorization_dialog.cpp  authorization_dialog.h  authorization_gui.cpp  authorization_gui.h  custom_transponder_sticker_dialog.cpp  custom_transponder_sticker_dialog.h  gui.cpp  gui.h  gui_kernel.cpp  gui_kernel.h  input_dialog.cpp  input_dialog.h  interaction_system.cpp  interaction_system.h  mainwindow.cpp  mainwindow.h  mainwindow_kernel.cpp  mainwindow_kernel.h  master_gui.cpp  master_gui.h  master_password_input_dialog.cpp  master_password_input_dialog.h  production_assembler_gui.cpp  production_assembler_gui.h  production_gui.cpp  production_gui.h  production_tester_gui.cpp  production_tester_gui.h  testing_gui.cpp  testing_gui.h  transponder_rerelease_dialog.cpp  transponder_rerelease_dialog.h  transponder_sticker_dialog.cpp  transponder_sticker_dialog.h  transponder_sticker_scan_dialog.cpp  transponder_sticker_scan_dialog.h  user_interaction_system.cpp  user_interaction_system.h  (+2 more)
GUI/Dialogs/: abstract_input_dialog.h  authorization_dialog.cpp  authorization_dialog.h  custom_transponder_sticker_dialog.cpp  custom_transponder_sticker_dialog.h  master_password_input_dialog.cpp  master_password_input_dialog.h  settings_dialog.cpp  settings_dialog.h  string_input_dialog.cpp  string_input_dialog.h  transponder_sticker_scan_dialog.cpp  transponder_sticker_scan_dialog.h  transponder_sticker_setup_dialog.cpp
GUI/Reactions/: abstract_progress_indicator.cpp  abstract_progress_indicator.h  abstract_return_status_handler.cpp  abstract_return_status_handler.h  progress_indicator.cpp  progress_indicator.h  progress_indicator_bundle.cpp  progress_indicator_bundle.h  return_status_handler.cpp  return_status_handler.h  return_status_handler_bundle.cpp  return_status_handler_bundle.h  status_indicator.cpp
GUI/Subkernels/: abstract_gui_subkernel.cpp  abstract_gui_subkernel.h  assembly_unit_gui_subkernel.cpp  assembly_unit_gui_subkernel.h  authorization_gui_subkernel.cpp  (+14 more)
General/: definitions.h  hash_model.cpp  hash_model.h  hash_table_model.cpp  hash_table_model.h  map_model.cpp  map_model.h  string_map_model.cpp  string_map_model.h  types.h
Log/: file_log_backend.cpp  file_log_backend.h  log_backend.cpp  log_backend.h  log_system.cpp  log_system.h  text_stream_log_backend.cpp  text_stream_log_backend.h  widget_log_backend.cpp  widget_log_backend.h
Management/: abstract_manager.cpp  abstract_manager.h  client_manager.cpp  client_manager.h  global_environment.cpp  network_manager.cpp  network_manager.h  perso_client.h  production_manager.cpp  production_manager.h  production_unit_context.cpp  production_unit_context.h  programmer_manager.cpp  programmer_manager.h  sticker_printer_manager.cpp  sticker_printer_manager.h
Printing/: abstract_sticker_printer.h  te310_printer.cpp  te310_printer.h
Programmers/: abstract_programmer.cpp  abstract_programmer.h  i_programmer.h  interface_programmer.cpp  interface_programmer.h  jlink_exe_programmer.cpp  jlink_exe_programmer.h  transponder_firmware.cpp  transponder_firmware.h  transponder_user_data.cpp  transponder_user_data.h
ServerConnection/: abstract_server_connection.cpp  abstract_server_connection.h  i_server_connection.h  perso_server_connection.cpp  perso_server_connection.h
Service/: abstract_object_environment.cpp  abstract_service_object_space.cpp  async_object_space.cpp  async_object_space.h  asynchronous_object_space.cpp  asynchronous_object_space.h  business_object_environment.cpp  business_object_environment.h  configuration_manager.cpp  configuration_manager.h  configuration_system.cpp  configuration_system.h  connectable_object.cpp  connectable_object.h  function_slot.h  service_object_environment.h  service_object_space.cpp  service_object_space.h
Sources/: FirmwareLoader.pro  FirmwareLoader.pro.user.11a0aa8  FirmwareLoader.pro.user.b1581c9  logsystem.cpp  logsystem.h  main.cpp  manager.h  usernotification.cpp  usernotification.h
StickerPrinter/: abstract_sticker_printer.cpp  i_sticker_printer.cpp  isticker_printer.cpp  isticker_printer.h  te310_printer.cpp  te310_printer.h
build-FirmwareLoader-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.FirmwareLoader.Debug  object_script.FirmwareLoader.Release
supplemental/: PersoClient.ini  persoclient.desktop
(+336 files in other folders)
